<?xml version="1.0"?>
<package format="2">
  <name>rviz_spray_sim</name>
  <version>0.0.0</version>
  <description>The rviz_spray_sim package</description>
  <maintainer email="chris.mower@ed.ac.uk">Chris E. Mower</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/cmower/rviz_spray_sim</url>
  <author email="chris.mower@ed.ac.uk">Chris E. Mower</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
